@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-11-28T00:46:43Z",
+  "timestamp" : "2023-11-29T00:46:05Z",
   "count_outdated" : 1478,
   "uniques_outdated" : 802,
-  "count" : 1508,
-  "uniques" : 821,
+  "count" : 1509,
+  "uniques" : 822,
   "clones" : [
     {
       "timestamp": "2023-11-18T00:00:00Z",
@@ -94,6 +94,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-11-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
